# esginfo_extractor

./: README.md  pyproject.toml  results.xlsx
src/: config.py  extractor.py
