[tool.poetry]
name = "esginfo_extractor"
version = "0.1.0"
description = "esginfo_extractor"
authors = ["Igor Pestretsov <i.pestretsov@outlook.com>"]
packages = [{ include = "src"}]

[tool.poetry.dependencies]
python = "3.10.6"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
openai = "^0.28.0"
langchain = "^0.0.286"
pypdf = "^3.16.0"
tiktoken = "^0.5.0"
faiss-cpu = "^1.7.4"
xlsxwriter = "^3.1.3"


[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
isort = "*"
flake8 = "*"
jupyter = "*"
matplotlib = "*"
seaborn = "*"
mypy = "*"
nbqa = "*"
autoflake = "*"
pydocstyle = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
